Yamls/deepdaph/api_deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: deepdaph-api
  namespace: deepdaph
spec:
  selector:
    app: deepdaph-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1
kind: Deployment
metadata:
  name: deepdaph-api
  namespace: deepdaph
spec:
  selector:
    matchLabels:
      app: deepdaph-api
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      name: deepdaph-api
      labels:
        app: deepdaph-api
    spec:
      containers:
      - name: deepdaph-api
        image: nanosolveit/deepdaph-api
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: workdir
          mountPath: /deepdaph-api/conf
      volumes:
      - name: workdir
        emptyDir: {}
---
