Yamls/deepdaph/app_deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: deepdaph-app
  namespace: deepdaph
spec:
  selector:
    app: deepdaph-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1 
kind: Pod
metadata:
  name: deepdaph-app
  namespace: deepdaph
  labels:
    app: deepdaph-app
spec:
  containers:
  - name: deepdaph-app
    image: nanosolveit/deepdaph
    ports:
    - containerPort: 80
    volumeMounts:
    - name: workdir
      mountPath: /usr/share/nginx/html/conf
  dnsPolicy: Default
  volumes:
  - name: workdir
    emptyDir: {}
---
