Yamls/deepdaph/api_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deepdaph-api-secure
  namespace: deepdaph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - deepdaph-api.cloud.nanosolveit.eu
    secretName: deepdaph-cert
  rules:
  - host: deepdaph-api.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: deepdaph-api
          servicePort: 5000
        path: /
