Yamls/deepdaph/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deepdaph-app-secure
  namespace: deepdaph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - deepdaph.cloud.nanosolveit.eu
    secretName: deepdaph-app-cert
  rules:
  - host: deepdaph.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: deepdaph-app
          servicePort: 80
        path: /
